# dockerlobby

./: .dockerignore  .gitignore  .hadolint.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  docker_sdk_test.py  pyproject.toml  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: CI.yml  dependabot.yml  deploy.yml  tests.yml
ansible/inventory/: hosts.ini.template
ansible/playbooks/: deploy.yml
app/: __init__.py  routes.py  services.py  utils.py
static/css/: style.css
static/js/: main.js  script.js
static/js/modules/: api.js  typewriter.js  ui.js  utils.js
templates/: index.html
tests/: conftest.py  test_init.py  test_routes.py  test_services.py  test_utils.py
