[project]
name = "dockerlobby"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "types-requests>=2.32.4.20260107",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]
security = [
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "ansible-lint>=24.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["tests"]


[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.mypy]
ignore_missing_imports = true
mypy_path = "."
explicit_package_bases = true

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
